deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: asset-cloud-web
  namespace: assetcloud
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/instance: asset-cloud-web
